<resources>
    <string name="app_name">GymLogMulti</string>
    <string name="app_label" translatable="false">GymLog</string>
    <string name="file_provider" translatable="false">com.example.android.fileprovider_gymlogmulti</string>
    <string name="err_first_name">Please enter first name</string>
    <string name="err_last_name">Please enter last name</string>
    <string name="err_phone">Please enter valid phone</string>
    <string name="spanish_key" translatable="false">spanish</string>
    <string name="english_key" translatable="false">english</string>
    <string name="spanish_label">Spanish</string>
    <string name="english_label">English</string>
    <string-array name="occupation_array">
        <item>@string/self_employed</item>
        <item>@string/employee</item>
        <item>@string/student</item>
        <item>@string/other</item>
    </string-array>
    <string name="self_employed">Self employed</string>
    <string name="employee">Employee</string>
    <string name="student">Student</string>
    <string name="other">Other</string>
    <string-array name="product_array">
        <item>@string/week</item>
        <item>@string/fortnight</item>
        <item>@string/month</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="product_array2">
        
    </string-array>
    <string name="week">Week</string>
    <string name="fortnight">Fortnight</string>
    <string name="month">Month</string>
    <string-array name="currency_array">
        <item>@string/usd</item>
        <item>@string/cordoba</item>
    </string-array>
    <string name="usd">USD</string>
    <string name="cordoba">C$</string>
    <string name="title_activity_send_reminder" translatable="false">SendReminderActivity</string>
    <string name="welcome">Welcome</string>
    <string name="days_access_remaining">days of access remaining</string>
    <string name="sorry">Sorry</string>
    <string name="your_access_has_expired">it seems that your access to the gym has expired.</string>
    <string name="please_pay_access">Please proceed to the counter to pay for access</string>
    <string name="thanks_for_staying">Thanks for preferring us</string>
    <string name="qr_code_scanner">QR code scanner</string>
    <string name="focus_barcode">Focus barcode</string>
    <string name="manual_search">Manual Search</string>
    <string name="contact_us">Did you like this app? contact us</string>
    <string name="admin">Admin</string>
    <string name="clients">clients</string>
    <string name="close">close</string>
    <string name="send_reminder">Send reminder</string>
    <string name="title_activity_search">Clients overview</string>
    <string name="current_class">Recent visits</string>
    <string name="client_profile">Client profile</string>
    <string name="new_client">New client</string>
    <string name="login">Login</string>
    <string name="new_payment">New payment</string>
    <string name="modify">Modify</string>
    <string name="settings">Settings</string>
    <string name="participants">participants</string>
    <string name="wrong_password">wrong password</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="backup_in_process">Backup in process, please wait!</string>
    <string name="no_internet">No internet connectivity</string>
    <string name="backup">Sync</string>
    <string name="search">Search</string>
    <string name="pay">Pay</string>
    <string name="backup_finished">Backup finished!</string>
    <string name="payments">payments</string>
    <string name="visits">visits</string>
    <string name="were_synced">records were successfully synced to the server</string>
    <string name="ok">OK</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="backup_failed_explained">No connection could be established with the server. Please try again. Ensure that you are connected to the same Wifi network as the server and that WAMP is currently running on your PC</string>
    <string name="invalid_entry">Invalid entry</string>
    <string name="input_required">Input required</string>
    <string name="valid_phone_required">valid phone required</string>
    <string name="id_has_to_be_numeric">Id has to be numeric</string>
    <string name="id_has_to_be_new">Id has to be new</string>
    <string name="click_again">click again see what happens</string>
    <string name="camera_permission_request">you need to grant camera permission for this to work</string>
    <string name="error_saving_contacts">Exception: Error while saving to contacts</string>
    <string name="id">id</string>
    <string name="personal_data">Personal data</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="occupation">occupation</string>
    <string name="phone_number">phone number</string>
    <string name="date_of_birth">date of birth</string>
    <string name="gender">Gender</string>
    <string name="take_photo">take photo</string>
    <string name="submit">Submit</string>
    <string name="hi">Hi</string>
    <string name="welcome_whatsapp_qr_code">"welcomes you to the gym! From now on you can use this QR code to badge in with us. Your identifier is *ID: "</string>
    <string name="asterisc_to_bolden_whatsapp">*</string>
    <string name="to">to:</string>
    <string name="from">from:</string>
    <string name="delete">Delete</string>
    <string name="date">Date:</string>
    <string name="message">Message:</string>
    <string name="message_reminder_default_content">UF reminds you that your payment is expiring today. Don\'t miss out and renew your access to the gym.</string>
    <string name="payments_due_on_this_date">Payments due on this date</string>
    <string name="pin_change_success">PIN changed successfully</string>
    <string name="error_pin_too_long">PIN must be 4 digits long</string>
    <string name="error_pin_wrong">Wrong entries! either old or new PIN does not match.</string>
    <string name="reset_pin_summay">Reset Admin access PIN</string>
    <string name="change_pin">Change reception PIN</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="use_front_camera">Use front camera</string>
    <string name="language">Language</string>
    <string name="backup_setup">Backup Setup</string>
    <string name="server_ip">Server IP</string>
    <string name="old_pin">old PIN</string>
    <string name="new_pin">new PIN</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="payment_information">Payment information</string>
    <string name="product">product</string>
    <string name="price_usd">price USD</string>
    <string name="last_payment_on_record">last payment:</string>
    <string name="input_has_to_be_numeric">Input has to be numeric</string>
    <string name="never">Never</string>
    <string name="attention">Attention!</string>
    <string name="are_you_sure">Are you sure you want to delete the</string>
    <string name="payment_from_period">payment for the period from</string>
    <string name="until">until</string>
    <string name="question_marc">\?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="xxxx_replaceable">XXXX will be replaced with the first name of the client</string>
    <string name="enter_product">Enter a product</string>
    <string name="enter_valid_amount">Enter a valid amount</string>
    <string name="unassigned_qr_code">This QR code has not been assigned</string>
    <string name="gym_name">Gym name</string>
    <string name="gym_owner">Gym owner</string>
    <string name="my_gym">My gym</string>
    <string name="single_day_pass">Single day pass</string>
    <string name="wrong_day_pass_price">wrongly typed day pass price</string>
    <string name="backup_all">Backup all</string>
    <string name="backup_all_sum">Rewrites all data to the server</string>
    <string name="recover_all">Recover all</string>
    <string name="recover_all_sum">Retrieves all data from the server</string>
    <string name="selected_time">Selected time  %s</string>
    <string name="gymlog_backup_successful">Backup successful</string>
    <string name="gymlog_backup_failed">Backup failed</string>
    <string name="failed_no_connection">No connection could be established</string>
    <string name="failed_response_w_errors">Server response contained errors</string>
    <string name="failed_malformed_json">Malformed JSON response</string>
    <string name="backup_time">Backup time</string>
    <string name="change_owner_pin">Change owner PIN</string>
    <string name="reset_reception_pin">Reset reception access PIN</string>
    <string name="reset_owner_pin">Reset owner access PIN</string>
    <string name="owner_pin">Owner PIN</string>
    <string name="value_success">new value was saved successfully</string>
    <string name="value_has_to_be_numeric">value has to be numeric</string>
    <string name="wrong_owner_pin">wrong owner PIN</string>
    <string name="exchange_rate">Exchange rate C$/USD</string>
    <string name="single_pass_minus1">Single day pass ID:-1</string>
    <string name="single_pass_minus2">Single day pass ID:-2</string>
    <string name="value_in_cs">Value in C$</string>
    <string name="confirm">confirm</string>
    <string name="toast_backup_all">Backup status has been reset. Back data up again now!</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="preferred_currency">Preferred currency</string>
    <string name="secure_manual_search">Secure manual search</string>
    <string name="currency">currency</string>
    <string name="price">price</string>
    <string name="comment">comment</string>
    <string name="advanced_options">ADVANCED OPTIONS</string>
    <string name="equivalent_to">equivalent to:</string>
    <string name="no_host_access">No host access</string>
    <string name="no_internet_at_planned_time">No internet connection was available at planned backup time</string>
    <string name="from_time">from: ⏲</string>
    <string name="to_time">to: ⏲</string>
    <string name="exchange_rate_text">exchange rate:</string>
    <string name="backup_set_for">Backup set for:</string>
    <string name="each_full_hour">each full hour and</string>
    <string name="minutes">minutes</string>
    <string name="restriction_from">Time restriction from:</string>
    <string name="restriction_to">Time restriction to:</string>
    <string name="open">open</string>
    <string name="open_folder">Open folder</string>
    <string name="csv_created">CSV exports were created</string>
    <string name="csv_created_msg">Press open to access the directory with the created files</string>
    <string name="csv_error">An error occurred while creating the files</string>
    <string name="no_app_available">No appropriate app available</string>
    <string name="csv_export">CSV export</string>
    <string name="from_edit">FROM date was edited,</string>
    <string name="gym_data">Gym Data</string>
    <string name="backup_server_address">Backup Server address</string>
    <string name="do_not_alter">Do not alter unless instructed by system admin</string>
    <string name="hide_thumbs">Hide thumbnails</string>
    <string name="connect_door">Connect door</string>
    <string name="door_settings">Door Settings</string>
    <string name="door_proximity">Use proximity sensor</string>
    <string name="door_proximity_summary">makes door close automatically on sensor input</string>
    <string name="door_duration">Open duration in seconds</string>
    <string name="door_duration_summary">Closes door when proximity sensor is not used</string>
    <string name="please_restart_the_app_for_changes_to_take_effect">Please restart the app for changes to take effect</string>
    <string name="add">Add</string>
    <string name="username">Username</string>
</resources>