<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/basic_settings">

        <SwitchPreference
            android:title="@string/use_front_camera"
            android:defaultValue="true"
            android:key="camera"/>

        <SwitchPreference
            android:title="@string/secure_manual_search"
            android:defaultValue="false"
            android:key="manualsearch"/>

        <SwitchPreference
            android:title="@string/hide_thumbs"
            android:defaultValue="false"
            android:key="hidethumbs"/>


        <Preference
            android:title="@string/change_pin"
            android:defaultValue="1234"
            android:key="changepin"
            android:summary="@string/reset_reception_pin"/>

        <Preference
            android:title="@string/change_owner_pin"
            android:defaultValue="1234"
            android:key="changeownerpin"
            android:summary="@string/reset_owner_pin"/>

        <EditTextPreference
            android:defaultValue="@string/my_gym"
            android:key="gymname"
            android:title="@string/gym_name"/>

        <Preference
            android:key="gymdata"
            android:title="@string/gym_data"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/door_settings">

        <SwitchPreference
            android:title="@string/connect_door"
            android:defaultValue="false"
            android:key="doorconnect" />

        <SwitchPreference
            android:title="@string/door_proximity"
            android:defaultValue="true"
            android:key="doorproximity"
            android:enabled="false"
            android:summary="@string/door_proximity_summary"/>

        <EditTextPreference
            android:title="@string/door_duration"
            android:inputType="number"
            android:enabled="false"
            android:defaultValue="5"
            android:key="doorduration"
            android:summary="@string/door_duration_summary"/>



    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/backup_setup">

        <Preference
            android:title="@string/backup_all"
            android:key="backupall"
            android:summary="@string/backup_all_sum"/>

        <Preference
            android:title="@string/recover_all"
            android:key="recoverall"
            android:summary="@string/recover_all_sum"/>

        <Preference
            android:title="@string/backup_time"
            android:key="timebackup"/>

        <Preference
            android:defaultValue="https://www.id-ex.de/GymLogMulti/php/"
            android:key="serveraddress"
            android:title="@string/backup_server_address"
            android:summary="@string/do_not_alter"/>


    </PreferenceCategory>



    <PreferenceCategory
        android:title="@string/payment_settings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/currency_labels"
            android:entryValues="@array/currency_values"
            android:summary="%s"
            android:key="preferredcurrency"
            android:title="@string/preferred_currency" />

        <Preference
            android:defaultValue="33"
            android:key="usd2cs"
            android:title="@string/exchange_rate"/>

        <Preference
            android:defaultValue="30"
            android:key="passminus1"
            android:title="@string/single_pass_minus1"/>

        <Preference
            android:defaultValue="30"
            android:key="passminus2"
            android:title="@string/single_pass_minus2"/>




    </PreferenceCategory>

</PreferenceScreen>