<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewClientActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lo_id"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:hint="@string/id"
                android:textStyle="bold"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/ev_id"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_data"
            android:textSize="28dp"
            android:gravity="right"/>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lo_first_name"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:id="@+id/ev_first_name"
            android:ems="10"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lo_last_name"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:id="@+id/ev_last_name"
            android:ems="10"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lo_occupation"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/occupation"

            android:id="@+id/actv_occupation"
            android:ems="10"
            android:completionThreshold="0"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lo_phone"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:id="@+id/ev_phone"
            android:ems="10"
            android:inputType="phone"
            />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lo_dob"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="130dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:focusableInTouchMode="false"
                    android:id="@+id/ev_dob"
                    android:ems="10"
                    />
            </android.support.design.widget.TextInputLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_gender"
                    android:hint="@string/gender"
                    android:textColor="?attr/editTextColor"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/rg_gender"
                    >
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="m    "
                        android:textColor="?attr/editTextColor"
                        android:id="@+id/rb_male"
                        android:checked="true"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="f    "
                        android:textColor="?attr/editTextColor"
                        android:id="@+id/rb_female"/>
                </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/bt_take_photo"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/take_photo"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_gravity="right"
                android:id="@+id/iv_photo"
                android:src="@drawable/camera"
                />



        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textStyle="bold"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bt_submit"/>


</LinearLayout>
</ScrollView>